--- a/y.yml
+++ b/y.yml
@@ -1,1 +1,6 @@
-- script: python src/a.py
+- task: PythonScript@0
+  inputs:
+    scriptSource: 'inline'
+    script: |
+      print('Hello world 1')
+      print('Hello world 2')
